--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,46 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calendar</title>
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body>
-    <h1>Calendar</h1>
+  <body class="page__body">
+    <div class="page__calendar calendar calendar--start-day--sun calendar--month-length--29">
+      <ul class="calendar__list">
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+      </ul>
+    </div>
   </body>
 </html>
