--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,41 @@
     <title>Calendar</title>
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body>
-    <h1>Calendar</h1>
+  <body class="container">
+
+    <div class="calendar calendar__day--sun calendar__month-length--31">
+      <div class="calendar___item"></div>
+      <div class="calendar___item"></div>
+      <div class="calendar___item"></div>
+      <div class="calendar___item"></div>
+      <div class="calendar___item"></div>
+      <div class="calendar___item"></div>
+      <div class="calendar___item"></div>
+      <div class="calendar___item"></div>
+      <div class="calendar___item"></div>
+      <div class="calendar___item"></div>
+      <div class="calendar___item"></div>
+      <div class="calendar___item"></div>
+      <div class="calendar___item"></div>
+      <div class="calendar___item"></div>
+      <div class="calendar___item"></div>
+      <div class="calendar___item"></div>
+      <div class="calendar___item"></div>
+      <div class="calendar___item"></div>
+      <div class="calendar___item"></div>
+      <div class="calendar___item"></div>
+      <div class="calendar___item"></div>
+      <div class="calendar___item"></div>
+      <div class="calendar___item"></div>
+      <div class="calendar___item"></div>
+      <div class="calendar___item"></div>
+      <div class="calendar___item"></div>
+      <div class="calendar___item"></div>
+      <div class="calendar___item"></div>
+      <div class="calendar___item"></div>
+      <div class="calendar___item"></div>
+      <div class="calendar___item"></div>
+    </div>
+    
   </body>
 </html>
