--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./styles/main.css">
   </head>
   <body>
-    <div class="calendar calendar--start-day--sun">
+    <div class="calendar calendar--start-day--sun calendar--month-length--29">
       <div class="calendar__cell calendar__cell--day--1"></div>
 
       <div class="calendar__cell calendar__cell--day--2"></div>
