--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,10 @@
   </head>
   <body>
     <div class="container">
-      <div class="calendar start-day-monday month-length-31">
+      <div
+        class="calendar start-sun"
+        data-month-length="29"
+      >
         <div class="calendar__day"></div>
         <div class="calendar__day"></div>
         <div class="calendar__day"></div>
