--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="container">
       <div
-        class="calendar start-sun"
+        class="calendar start--sun"
         data-month-length="29"
       >
         <div class="calendar__day"></div>
