--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body class="page">
-    <div class="calendar calendar--start-day--sun calendar--month-length--28 calendar--month-length--29 calendar--month-length--30 calendar--month-length--31">
+    <div class="calendar calendar--start-day--sun calendar--month-length--31">
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
