--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,10 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <!-- <h1>Calendar</h1> -->
-    <div class="calendar">
+    <h1>Calendar</h1>
+    <div class="calendar calendar--month-length-29 calendar--start-wed">
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
