--- a/src/index.html
+++ b/src/index.html
@@ -7,38 +7,38 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <ul class="calendar-list calendar-list--start-day--wed calendar-list--month-length--29">
-      <li class="calendar-list__item "></li>
-      <li class="calendar-list__item"></li>
-      <li class="calendar-list__item"></li>
-      <li class="calendar-list__item"></li>
-      <li class="calendar-list__item"></li>
-      <li class="calendar-list__item"></li>
-      <li class="calendar-list__item"></li>
-      <li class="calendar-list__item"></li>
-      <li class="calendar-list__item"></li>
-      <li class="calendar-list__item"></li>
-      <li class="calendar-list__item"></li>
-      <li class="calendar-list__item"></li>
-      <li class="calendar-list__item"></li>
-      <li class="calendar-list__item"></li>
-      <li class="calendar-list__item"></li>
-      <li class="calendar-list__item"></li>
-      <li class="calendar-list__item"></li>
-      <li class="calendar-list__item"></li>
-      <li class="calendar-list__item"></li>
-      <li class="calendar-list__item"></li>
-      <li class="calendar-list__item"></li>
-      <li class="calendar-list__item"></li>
-      <li class="calendar-list__item"></li>
-      <li class="calendar-list__item"></li>
-      <li class="calendar-list__item"></li>
-      <li class="calendar-list__item"></li>
-      <li class="calendar-list__item"></li>
-      <li class="calendar-list__item "></li>
-      <li class="calendar-list__item "></li>
-      <li class="calendar-list__item "></li>
-      <li class="calendar-list__item "></li>
+    <ul class="calendar calendar--start-day--wed calendar--month-length--29">
+      <li class="calendar__item "></li>
+      <li class="calendar__item"></li>
+      <li class="calendar__item"></li>
+      <li class="calendar__item"></li>
+      <li class="calendar__item"></li>
+      <li class="calendar__item"></li>
+      <li class="calendar__item"></li>
+      <li class="calendar__item"></li>
+      <li class="calendar__item"></li>
+      <li class="calendar__item"></li>
+      <li class="calendar__item"></li>
+      <li class="calendar__item"></li>
+      <li class="calendar__item"></li>
+      <li class="calendar__item"></li>
+      <li class="calendar__item"></li>
+      <li class="calendar__item"></li>
+      <li class="calendar__item"></li>
+      <li class="calendar__item"></li>
+      <li class="calendar__item"></li>
+      <li class="calendar__item"></li>
+      <li class="calendar__item"></li>
+      <li class="calendar__item"></li>
+      <li class="calendar__item"></li>
+      <li class="calendar__item"></li>
+      <li class="calendar__item"></li>
+      <li class="calendar__item"></li>
+      <li class="calendar__item"></li>
+      <li class="calendar__item "></li>
+      <li class="calendar__item "></li>
+      <li class="calendar__item "></li>
+      <li class="calendar__item "></li>
     </ul>
   </body>
 </html>
