--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="calendar calendar--month-length-31 calendar--start-day--mon">
-      <div class="calendar__day calendar__day--first-day"></div>
+      <div class="calendar__day"></div>
 
       <div class="calendar__day"></div>
 
