--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,38 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <h1>Calendar</h1>
+    <div class="calendar calendar--month--length calendar--start--day">
+      <div class="calendar-day"></div>
+      <div class="calendar-day"></div>
+      <div class="calendar-day"></div>
+      <div class="calendar-day"></div>
+      <div class="calendar-day"></div>
+      <div class="calendar-day"></div>
+      <div class="calendar-day"></div>
+      <div class="calendar-day"></div>
+      <div class="calendar-day"></div>
+      <div class="calendar-day"></div>
+      <div class="calendar-day"></div>
+      <div class="calendar-day"></div>
+      <div class="calendar-day"></div>
+      <div class="calendar-day"></div>
+      <div class="calendar-day"></div>
+      <div class="calendar-day"></div>
+      <div class="calendar-day"></div>
+      <div class="calendar-day"></div>
+      <div class="calendar-day"></div>
+      <div class="calendar-day"></div>
+      <div class="calendar-day"></div>
+      <div class="calendar-day"></div>
+      <div class="calendar-day"></div>
+      <div class="calendar-day"></div>
+      <div class="calendar-day"></div>
+      <div class="calendar-day"></div>
+      <div class="calendar-day"></div>
+      <div class="calendar-day"></div>
+      <div class="calendar-day"></div>
+      <div class="calendar-day"></div>
+      <div class="calendar-day"></div>
+    </div>
   </body>
 </html>
