--- a/src/index.html
+++ b/src/index.html
@@ -8,37 +8,37 @@
   </head>
   <body>
     <div class="calendar calendar--month--length calendar--start--day">
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
-      <div class="calendar-day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
     </div>
   </body>
 </html>
