--- a/src/index.html
+++ b/src/index.html
@@ -8,38 +8,38 @@
   </head>
   <body>
     <h1>Calendar</h1>
-    <div class="calender calender--start-mon calender--month-length-31">
-      <div class="calender__date"></div>
-      <div class="calender__date"></div>
-      <div class="calender__date"></div>
-      <div class="calender__date"></div>
-      <div class="calender__date"></div>
-      <div class="calender__date"></div>
-      <div class="calender__date"></div>
-      <div class="calender__date"></div>
-      <div class="calender__date"></div>
-      <div class="calender__date"></div>
-      <div class="calender__date"></div>
-      <div class="calender__date"></div>
-      <div class="calender__date"></div>
-      <div class="calender__date"></div>
-      <div class="calender__date"></div>
-      <div class="calender__date"></div>
-      <div class="calender__date"></div>
-      <div class="calender__date"></div>
-      <div class="calender__date"></div>
-      <div class="calender__date"></div>
-      <div class="calender__date"></div>
-      <div class="calender__date"></div>
-      <div class="calender__date"></div>
-      <div class="calender__date"></div>
-      <div class="calender__date"></div>
-      <div class="calender__date"></div>
-      <div class="calender__date"></div>
-      <div class="calender__date"></div>
-      <div class="calender__date"></div>
-      <div class="calender__date"></div>
-      <div class="calender__date"></div>
-    </div>
+    <main class="calender calender--start-mon calender--month-length-31">
+      <section class="calender__date"></section>
+      <section class="calender__date"></section>
+      <section class="calender__date"></section>
+      <section class="calender__date"></section>
+      <section class="calender__date"></section>
+      <section class="calender__date"></section>
+      <section class="calender__date"></section>
+      <section class="calender__date"></section>
+      <section class="calender__date"></section>
+      <section class="calender__date"></section>
+      <section class="calender__date"></section>
+      <section class="calender__date"></section>
+      <section class="calender__date"></section>
+      <section class="calender__date"></section>
+      <section class="calender__date"></section>
+      <section class="calender__date"></section>
+      <section class="calender__date"></section>
+      <section class="calender__date"></section>
+      <section class="calender__date"></section>
+      <section class="calender__date"></section>
+      <section class="calender__date"></section>
+      <section class="calender__date"></section>
+      <section class="calender__date"></section>
+      <section class="calender__date"></section>
+      <section class="calender__date"></section>
+      <section class="calender__date"></section>
+      <section class="calender__date"></section>
+      <section class="calender__date"></section>
+      <section class="calender__date"></section>
+      <section class="calender__date"></section>
+      <section class="calender__date"></section>
+    </main>
   </body>
 </html>
