--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <title>Calendar</title>
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body>
+  <body class="container">
     <section class="calendar calendar--start-day--sat calendar--month-length--31">
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
