--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,38 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <h1>Calendar</h1>
+    <div class="calendar calendar--start-day--sat calendar--month-length--28">
+      <div class="days"></div>
+      <div class="days"></div>
+      <div class="days"></div>
+      <div class="days"></div>
+      <div class="days"></div>
+      <div class="days"></div>
+      <div class="days"></div>
+      <div class="days"></div>
+      <div class="days"></div>
+      <div class="days"></div>
+      <div class="days"></div>
+      <div class="days"></div>
+      <div class="days"></div>
+      <div class="days"></div>
+      <div class="days"></div>
+      <div class="days"></div>
+      <div class="days"></div>
+      <div class="days"></div>
+      <div class="days"></div>
+      <div class="days"></div>
+      <div class="days"></div>
+      <div class="days"></div>
+      <div class="days"></div>
+      <div class="days"></div>
+      <div class="days"></div>
+      <div class="days"></div>
+      <div class="days"></div>
+      <div class="days"></div>
+      <div class="days"></div>
+      <div class="days"></div>
+      <div class="days"></div>
+    </div>
   </body>
 </html>
