--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,8 @@
   </head>
   <body>
     <h1>Calendar</h1>
-    <div class="calendar">
+
+    <div class="calendar calendar--start-day-mon calendar--month-length-30">
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
