--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body class="page">
-    <div class="calendar calendar--month-length--30 calendar--start-day--wed">
+    <h1 class="page__title">Calendar</h1>
+    <div class="calendar
+                calendar--month-length--30
+                calendar--start-day--wed">
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
