--- a/src/index.html
+++ b/src/index.html
@@ -8,37 +8,37 @@
   </head>
   <body>
     <ul class="calendar calendar--start-day-sun calendar--month-length-29">
-      <li class="day"></li>
-      <li class="day"></li>
-      <li class="day"></li>
-      <li class="day"></li>
-      <li class="day"></li>
-      <li class="day"></li>
-      <li class="day"></li>
-      <li class="day"></li>
-      <li class="day"></li>
-      <li class="day"></li>
-      <li class="day"></li>
-      <li class="day"></li>
-      <li class="day"></li>
-      <li class="day"></li>
-      <li class="day"></li>
-      <li class="day"></li>
-      <li class="day"></li>
-      <li class="day"></li>
-      <li class="day"></li>
-      <li class="day"></li>
-      <li class="day"></li>
-      <li class="day"></li>
-      <li class="day"></li>
-      <li class="day"></li>
-      <li class="day"></li>
-      <li class="day"></li>
-      <li class="day"></li>
-      <li class="day"></li>
-      <li class="day"></li>
-      <li class="day"></li>
-      <li class="day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
+      <li class="calendar__day"></li>
 
     </ul>
   </body>
