--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calendar</title>
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
+
   <body>
-    <h1>Calendar</h1>
+    <section class="calendar">
+      <div class="calendar-day"></div>
+      <div class="calendar-day"></div>
+      <div class="calendar-day"></div>
+      <div class="calendar-day"></div>
+      <div class="calendar-day"></div>
+      <div class="calendar-day"></div>
+      <div class="calendar-day"></div>
+      <div class="calendar-day"></div>
+      <div class="calendar-day"></div>
+      <div class="calendar-day"></div>
+      <div class="calendar-day"></div>
+      <div class="calendar-day"></div>
+      <div class="calendar-day"></div>
+      <div class="calendar-day"></div>
+      <div class="calendar-day"></div>
+      <div class="calendar-day"></div>
+      <div class="calendar-day"></div>
+      <div class="calendar-day"></div>
+      <div class="calendar-day"></div>
+      <div class="calendar-day"></div>
+      <div class="calendar-day"></div>
+      <div class="calendar-day"></div>
+      <div class="calendar-day"></div>
+      <div class="calendar-day"></div>
+      <div class="calendar-day"></div>
+      <div class="calendar-day"></div>
+      <div class="calendar-day"></div>
+      <div class="calendar-day"></div>
+      <div class="calendar-day"></div>
+      <div class="calendar-day"></div>
+      <div class="calendar-day"></div>
+    </section>
   </body>
+
 </html>
