--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <div class="month">
+    <div class="month month--length-29 month--start-day-wed">
       <div class="month__day"></div>
       <div class="month__day"></div>
       <div class="month__day"></div>
